# nano-header-check

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
nano_header_check/: __init__.py  core.py
tests/: test_nano_header_check.py
